Fixed z-index issue between smart-table and smart-search

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -764,6 +764,9 @@ a.bit-btn {
 
 .smart-search {
     background: #d9d9d9;
+    /* Ensure smart-search cannot cover other elements */
+    position: relative;
+    z-index: 10;
 }
 
 .smart-search--heading {
@@ -841,6 +844,9 @@ a.bit-btn {
     width: 100%;
     border-spacing: 0;
     border: 1px solid #0d0908;
+    /* Ensure smart-table will not be covered by smart-search */
+    position: relative;
+    z-index: 20;
 }
 
 @media screen and (max-width: 1024px) {
